# usagef

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
.github/workflows/: code_testing.yml  pr_check.yml  release_automation.yml
src/: CMakeLists.txt  usagef.c  usagef_config.c  usagef_config.h.in
src/usagef/: .clang-tidy  const.c  const.h  run.c  run.h
src/usagef/argv/: argv.h  is_valid_argv.c
src/usagef/slibs/: .clang-tidy  stdio.h  string.h
tests/: CMakeLists.txt
tests/misc/: test_get_unique_num.sh  test_is_valid_branch_name.sh  test_shell_common_strings.sh
tests/output/: test_usage_message.sh  test_version.sh
tests/output/expected/: usage_message.txt
tests/unit/: common.c  common.h  test_const.c  test_run.c
tests/unit/argv/: test_is_valid_argv.c
tools/shell/: build.sh  package.sh
tools/shell/common/: functions.sh  strings.sh
tools/shell/testing/: test.sh  test_coverage.sh  test_misc.sh  test_output.sh  test_static.sh  test_units.sh  test_valgrind.sh
tools/shell/testing/common/: functions.sh
tools/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake  x86_64-apple-darwin18.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
